# GeminiPaste

./: .gitignore  GeminiPaste.ahk  PLAN.md  README.md  config.ini  config.ini.sample  justfile  main.js  package-lock.json  package.json  prompt.html  promptPreload.js  settings.html  settingsPreload.js  settingsRenderer.js
gemini_processor/: Cargo.toml
gemini_processor/src/: main.rs
