[package]
name = "gemini_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
image = "0.25"
base64 = "0.22"
rust-ini = "0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
thiserror = "2"
